--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "teach-bot"
+name = "gnome-chompski"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 dotenv = { version = "0.15.0" }
-inquire = "0.6.0"
 eyre = "0.6.8"
+inquire = "0.6.0"
 regex = "1"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
