--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 serenity = { version = "0.11.5", features = ["default_native_tls"] }
+strum = { version = "0.24.1", features = ["derive"] }
+strum_macros = "0.24.1"
 tokio = { version = "1", features = ["full"] }
